Bug 1900466 - Allocate proxy objects in the nursery where possible r=jandem

Proxy handlers have a canNurseryAllocate() method which is used to determine
whether to allocate them in the nursery. Whether this is safe or not depends on
whether the finalize() method tolerates not being called for objects that die
in the nursery. The default finalize method for proxies is fine with this.

It turns out that most proxy handlers don't override finalize and so we should
be able to allocate them in the nursery. It looks like the reason we don't is
due to oversight rather than anything fundamental.

The patch adds a new class in the proxy handler heirarchy,
NurseryAllocableProxyHandler and uses it where possible. This helps make it
clearer that other proxies aren't allocated in the nursery by default. In
addition, cross compartment wrappers are manually opted in to nursery
allocation. DOM proxies do add a finalize method, so Wrapper cannot be nursery
allocated by default.

Doing this shows some significant improvements on some of the NewsSite-Nuxt
subtests of speedometer3. Annoyingly there is also a large regression on one
Ares6 subtest but looking at the profile this seems to be due to GC happening
in a different place in the test rather than anything getting slower.

Differential Revision: https://phabricator.services.mozilla.com/D212776