js/src/vm/EnvironmentObject.cpp
@@ -1585,7 +1585,7 @@ namespace {
  *    proxy can either hide these optimizations or make the situation more
  *    clear to the debugger. An example is 'arguments'.
  */
-class DebugEnvironmentProxyHandler : public BaseProxyHandler {
+class DebugEnvironmentProxyHandler : public NurseryAllocableProxyHandler {
   enum Action { SET, GET };
 
   enum AccessResult { ACCESS_UNALIASED, ACCESS_GENERIC, ACCESS_LOST };
@@ -2086,7 +2086,8 @@ class DebugEnvironmentProxyHandler : public BaseProxyHandler {
   static const char family;
   static const DebugEnvironmentProxyHandler singleton;
 
-  constexpr DebugEnvironmentProxyHandler() : BaseProxyHandler(&family) {}
+  constexpr DebugEnvironmentProxyHandler()
+      : NurseryAllocableProxyHandler(&family) {}
 
   static bool isFunctionEnvironmentWithThis(const JSObject& env) {
     // All functions except arrows should have their own this binding.
